# AI-Powered-Supply-Chain-Analytics-Tool

./: app.py  project_documentation.md  pyproject.toml  requirements_list.txt  start_env.bat
.streamlit/: config.toml  config.toml.bak
assets/sample_data/: sample_cost.csv  sample_inventory.csv  sample_sales.csv  sample_shipment.csv
pages/: advanced_analytics_page.py  area_analysis.py  dashboard.py  forecasting.py  geo_visualization.py  recommendations.py  settings.py
utils/: advanced_analytics.py  advanced_ml.py  api_connector.py  data_processor.py  database.py  db_setup.py  export_tools.py  ml_models.py  recommendations.py  visualization.py
