[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "statsmodels>=0.14.4",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.45.1",
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "folium>=0.19.5",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.41",
    "prophet>=1.1.6",
    "tensorflow>=2.14.0",
    "requests>=2.32.3",
    "openpyxl>=3.1.5",
    "pdfkit>=1.0.0",
    "networkx>=3.4.2",
]
